WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203522
[ANGLE] Window Server blocking stops single GPU systems from creating a CGLPixelFormat
https://bugs.webkit.org/show_bug.cgi?id=203522
Summary
[ANGLE] Window Server blocking stops single GPU systems from creating a CGLPi...
Dean Jackson
Reported
2019-10-28 14:26:42 PDT
[ANGLE] Window Server blocking stops single GPU systems from creating a CGLPixelFormat
Attachments
Patch
(2.00 KB, patch)
2019-10-28 14:30 PDT
,
Dean Jackson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-10-28 14:30:42 PDT
Created
attachment 382108
[details]
Patch
EWS Watchlist
Comment 2
2019-10-28 14:31:35 PDT
Note that there are important steps to take when updating ANGLE. See
http://trac.webkit.org/wiki/UpdatingANGLE
Radar WebKit Bug Importer
Comment 3
2019-10-28 14:34:46 PDT
<
rdar://problem/56685302
>
Radar WebKit Bug Importer
Comment 4
2019-10-28 14:35:08 PDT
<
rdar://problem/56685317
>
Alex Christensen
Comment 5
2019-10-28 15:25:00 PDT
Comment on
attachment 382108
[details]
Patch mSupportsGPUSwitching has one other use. Is it still good, or could we remove it entirely?
Dean Jackson
Comment 6
2019-10-29 10:21:51 PDT
(In reply to Alex Christensen from
comment #5
)
> Comment on
attachment 382108
[details]
> Patch > > mSupportsGPUSwitching has one other use. Is it still good, or could we > remove it entirely?
I want to minimize the diff from core ANGLE, so I think we should leave it in and let them decide.
Dean Jackson
Comment 7
2019-10-29 13:01:28 PDT
Committed
r251727
: <
https://trac.webkit.org/changeset/251727
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug