[ANGLE] Window Server blocking stops single GPU systems from creating a CGLPixelFormat https://bugs.webkit.org/show_bug.cgi?id=203522 <rdar://problem/56685302>

Reviewed by Alex Christensen.

The Web Content Process blocks access to the Window Server. For that reason, we
must create all CGLPixelFormats with the "offline renderer" flag, even if we're
not on a dual-GPU system.

* src/libANGLE/renderer/gl/cgl/DisplayCGL.mm: Always enable kCGLPFAAllowOfflineRenderers.
(rx::DisplayCGL::initialize):

Canonical link: https://commits.webkit.org/216945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251727 268f45cc-cd09-0410-ab3c-d52691b4dbfc